# yocto-releases-script

./: .gitignore  LICENSE  README.md  pyproject.toml  tox.ini  yocto_releases_script.py
src/yocto_releases/: __init__.py  __main__.py  classes.py  cmd_parser.py  constants.py
tests/: test_app.py
